GNOME Bugzilla – Bug 667573
various srcdir != builddir fixes
Last modified: 2019-02-22 11:59:31 UTC
see patch
Created attachment 204876 [details] [review] various srcdir != builddir fixes
Review of attachment 204876 [details] [review]: Looks good, although I would change all the links in gcr.h and gcr-base.h to use the <gcr/xxx.h> form you described.
Created attachment 204882 [details] [review] Change style of toplevel installed headers Use <gcr/xxx.h> instead of "xxx.h" style.
Attachment 204876 [details] pushed as a3cdb51 - various srcdir != builddir fixes Attachment 204882 [details] pushed as db8d420 - Change style of toplevel installed headers