various srcdir != builddir fixes

https://bugzilla.gnome.org/show_bug.cgi?id=667573